--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "node api/server.js",
     "start": "react-scripts start",
     "dev": "nodemon api/server.js",
-    "build": "react-scripts build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
