--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "react-sql-query-app",
   "version": "1.0.0",
   "description": "A React SPA to query an SQL database using an LLM.",
-  "main": "server.js",
+  "main": "api/server.js",
   "scripts": {
     "server": "node api/server.js",
     "start": "react-scripts start",
     "dev": "nodemon api/server.js",
     "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "axios": "^0.21.4",
@@ -17,18 +18,20 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "papaparse": "^5.4.1",
     "pg": "^8.11.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "openai": "^3.0.0",
+    "fs": "0.0.1-security"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.12"
   },
   "engines": {
     "node": ">=14.0.0"
