--- a/package.json
+++ b/package.json
@@ -13,21 +13,23 @@
     "heroku-postbuild": "NODE_OPTIONS=--openssl-legacy-provider npm run build"
   },
   "dependencies": {
-    "axios": "^0.21.4",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.19.2",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "openai": "^4.47.1",
     "papaparse": "^5.4.1",
     "pg": "^8.11.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "openai": "^3.0.0",
-    "fs": "0.0.1-security"
+    "react-scripts": "^5.0.1",
+    "set-value": "^4.1.0",
+    "update": "^0.4.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
