--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.19.2",
+    "firebase-tools": "^13.10.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.47.1",
