--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "node api/server.js",
     "start": "node api/server.js",
-    "dev": "nodemon api/server.js",
+    "dev": "concurrently \"nodemon api/server.js\" \"react-scripts start\"",
     "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -14,6 +14,7 @@
     "client": "react-scripts start"
   },
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -33,6 +34,7 @@
     "workbox-webpack-plugin": "^7.1.0"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "nodemon": "^2.0.22"
   },
   "engines": {
