--- a/api/config/prompts.yaml
+++ b/api/config/prompts.yaml
@@ -11,13 +11,13 @@ geography_codes:
 
 prompts:
   dataset_selection:
-    description: "Select the relevant dataset codes using the descriptions below, that can be used to answer the provided query. Return only the dataset codes as a comma separated list, without descriptions."
+    description: "Use the descriptions to select the correct codes to answer the provided query. Return only the dataset codes as a comma separated list, without descriptions."
   sql_generation:
     description: |
       Use the provided question to write an SQL query for a PostgreSQL database using the schema(s) and Geography Codes below.
       - Return only the SQL query as a string.
       - Ensure to match the column name exactly.
       - Wrap column names in double quotes.
-      - Use the {table code}-{geography code} pair in your query, for example "ts0001-oa", "ts0002-ltla" etc.
-      - Always include "geography" and "geography_code" at the start of the list of selected columns, even if they are not explicitly mentioned in the statement.
+      - Use the {table code}-{geography code} pair in your query, for example "ts001-oa", "ts002-ltla" etc.
+      - Always include "geoname" and "geocode" at the start of the list of selected columns, even if they are not explicitly mentioned in the statement.
       - If the question doesn't make sense or doesn't relate to the schemas, simply return "invalid question".
