--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.51.0",
     "pg": "^8.11.5",
+    "plotly.js": "^2.33.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-plotly.js": "^2.6.0",
+    "react-plotlyjs": "^0.4.4",
     "react-scripts": "^5.0.1",
     "resolve-url-loader": "^4.0.0",
     "svgo": "^2.8.0",
